<resources>
    <string name="app_name">EduAssets</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="facebook_app_id">413034322797194</string>
    <string name="fb_login_protocol_scheme">fb413034322797194</string>

    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>`
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EduAssets</string>
    <string name="nav_header_subtitle">eduassets.co.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textWelcomeBack">Welcome Back</string>
    <string name="textTagline">Transforming Your Future Into Asset</string>
    <string name="textSignup">Sign Up</string>
    <string name="textForgotpwd">Forget Password</string>
    <string name="textEmail">Email</string>
    <string name="textSignIn">Sign In</string>
    <string name="textPassword">Password</string>
    <string name="textEnterSomeDetails">Enter Some Details</string>
    <string name="EnterCourse">Enter Persuing Course</string>
    <string name="Entername">Enter your Name</string>
    <string name="textEnterCollege">Enter your College Name</string>
    <string name="EnterSem">Enter your current Semester</string>
    <string name="Done">Done</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="semester">Semester</string>
    <string name="course">course</string>
    <string name="name">name</string>
    <string name="edit_details">Edit Details</string>
    <string name="college">college</string>
    <string name="enrolled_course">enrolled course</string>
    <string name="username">Username</string>
    <string name="user_example_com">user@example.com</string>
    <string name="textEngageWithUs">Engage With Us</string>
    <string name="textAnEmail">A verification email will be sent to your given email ID</string>
    <string name="textEnterName">Enter Your Name</string>
    <string name="textName">Name</string>
    <string name="textEnterCourse">Enter YourCourse</string>
    <string name="textCourse">Course</string>
    <string name="cart">Your Cart</string>
    <string name="purchasedCourse">Purchased Course</string>
    <string name="textOtherCourse">Other Course</string>
    <string name="edu_assets">EduAssets</string>
    <string name="enter_university">Enter University</string>
    <string name="yourSyllabus">Your Syllabus</string>
    <string name="otherUniversity">Other University</string>
    <!--<string name="default_web_client_id">592629978872-ua2gnpmquvs6bamqop7redls9e4kvufv.apps.googleusercontent.com</string>-->

    <string-array name="courses">
        <item> Select Course</item>
        <item> BBA</item>
        <item>BCom</item>
        <item>BCA</item>
        <item>BA</item>
        <item> Other</item>


    </string-array>

    <string-array name="university">
        <item> Select University</item>
        <item> IPU</item>
        <item>DU</item>
        <item>Other</item>
    </string-array>


</resources>
