<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimen_20dp"
    android:paddingRight="@dimen/dimen_20dp">

    <TextView
        android:id="@+id/enterDetailsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/textEnterSomeDetails"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold|italic"
        />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/enterDetailsText"
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:hint="@string/textEnterName"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/dimen_15sp"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/textName"
        app:met_floatingLabelTextColor="@color/black"
        app:met_hideUnderline="true" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/nameEditText"
        android:id="@+id/courseEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:hint="@string/textEnterCourse"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/dimen_15sp"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/textCourse"
        app:met_floatingLabelTextColor="@color/black"
        app:met_hideUnderline="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/courseEdit"
        android:id="@+id/collegeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:hint="@string/textEnterCollege"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/dimen_15sp"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/college"
        app:met_floatingLabelTextColor="@color/black"
        app:met_hideUnderline="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_below="@id/collegeEdit"
        android:id="@+id/semesterEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:hint="@string/EnterSem"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/dimen_15sp"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/semester"
        app:met_floatingLabelTextColor="@color/black"
        app:met_hideUnderline="true" />

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:background="@drawable/login_button"
        android:text="@string/Done"
        android:layout_below="@id/semesterEdit" />
</RelativeLayout>
</layout>