<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/dimen_15dp"
    android:layout_marginRight="@dimen/dimen_15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textEnterSomeDetails"
        android:textSize="@dimen/dimen_15sp"
        android:lineHeight="@dimen/dimen_20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:id="@+id/textEnterSome"
        android:layout_marginTop="@dimen/dimen_40dp"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_below="@id/textEnterSome"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:hint="@string/Entername"
        app:met_underlineColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/editName"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_below="@id/editName"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:hint="@string/EnterCourse"
        app:met_underlineColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/editCourse"
        />
     <com.rengwuxian.materialedittext.MaterialEditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_40dp"
    android:layout_below="@id/editCourse"
    android:layout_marginTop="@dimen/dimen_15dp"
    android:hint="@string/textEnterCollege"
    app:met_underlineColor="@color/black"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:id="@+id/editCollege"
    />    <com.rengwuxian.materialedittext.MaterialEditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_40dp"
    android:layout_below="@id/editCollege"
    android:layout_marginTop="@dimen/dimen_15dp"
    android:hint="@string/EnterSem"
    app:met_underlineColor="@color/black"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:id="@+id/editSem"
    />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editSem"
        android:text="@string/Done"/>
</RelativeLayout>
</FrameLayout>