<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProfileActivity">

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/edit_details"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/profile_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="@dimen/dimen_12sp"
        android:layout_below="@id/profile_text" />

    <EditText
        android:id="@+id/profile_course_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:ems="10"
        android:hint="@string/course"
        android:inputType="textPersonName"
        android:textSize="@dimen/dimen_12sp"
        android:layout_below="@id/profile_name_edit_text"/>

    <EditText
        android:id="@+id/profile_semester_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:ems="10"
        android:hint="@string/semester"
        android:inputType="textPersonName"
        android:textSize="@dimen/dimen_12sp"
        android:layout_below="@id/profile_course_edit_text"/>
    <EditText
        android:id="@+id/profile_college_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:ems="10"
        android:hint="@string/college"
        android:inputType="textPersonName"
        android:textSize="@dimen/dimen_12sp"
        android:layout_below="@id/profile_semester_edit_text"/>

    <EditText
        android:id="@+id/profile_enrolled_course_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:ems="10"
        android:hint="@string/enrolled_course"
        android:inputType="textPersonName"
        android:textSize="@dimen/dimen_12sp"
        android:layout_below="@id/profile_college_edit_text" />

    <Button
        android:id="@+id/profile_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:layout_marginEnd="@dimen/dimen_32dp"
        android:text="Save"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14sp"
        android:layout_below="@id/profile_enrolled_course_edit_text"/>

</RelativeLayout>