<RelativeLayout android:id="@+id/afterAnimationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dimen_20dp"
    android:layout_marginEnd="@dimen/dimen_20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="@dimen/dimen_75dp"
        android:layout_height="@dimen/dimen_100dp"
        android:src="@drawable/logopng"
        android:id="@+id/topLogo"
        />
    <TextView
        android:layout_below="@id/topLogo"
        android:id="@+id/WelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textEngageWithUs"
        android:textColor="@color/colorBackground"
        android:textSize="@dimen/dimen_25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/readItTogetherTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/WelcomeTextView"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/textAnEmail"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/dimen_15sp" />




    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_marginTop="@dimen/dimen_50dp"

        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/readItTogetherTextView"
        android:hint="@string/textEmail"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/dimen_15sp"
        style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/textEmail"
        app:met_floatingLabelTextColor="@color/black"
        app:met_hideUnderline="true" />

    <com.rengwuxian.materialedittext.MaterialEditText

        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/registerEmail"
        android:hint="@string/textPassword"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textColor="@color/colorTextView"
        android:textColorHint="@color/colorAccent"
        android:textSize="@dimen/dimen_15sp"
        android:drawableRight="@drawable/ic_email"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelText="@string/textPassword"
        app:met_floatingLabelTextColor="@color/black"

        app:met_hideUnderline="true" />

    <Button
        android:id="@+id/regbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPassword"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:background="@drawable/login_button"
        android:text="@string/textSignIn"
        android:textAllCaps="false"
        android:textColor="#0B3D48"
        android:textSize="@dimen/dimen_16sp" />
</RelativeLayout>