<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_image_view"
        android:layout_width="@dimen/dimen_112dp"
        android:layout_height="@dimen/dimen_112dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_32dp"

        android:contentDescription="@string/nav_header_desc"

        app:srcCompat="@drawable/ic_user_" />

    <TextView
        android:id="@+id/nav_header_username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_header_image_view"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/profileOuter"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nav_header_username_text_view"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/dimen_16sp"
        android:textColor="@color/profileOuter"

        android:text="@string/user_example_com" />

</RelativeLayout>
