<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<RelativeLayout
        android:id="@+id/afterAnimationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
>

        <ImageView
            android:layout_width="@dimen/dimen_75dp"
            android:layout_height="@dimen/dimen_100dp"
            android:src="@drawable/logopng"
            android:id="@+id/topLogo"
            />
        <TextView
            android:layout_below="@id/topLogo"
            android:id="@+id/WelcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWelcomeBack"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/dimen_25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/readItTogetherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/WelcomeTextView"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/textTagline"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimen_15sp" />

        <RelativeLayout
            android:id="@+id/fieldsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/readItTogetherTextView"
            android:gravity="center"
            android:orientation="vertical">



            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_marginTop="@dimen/dimen_50dp"

                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/textEmail"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/dimen_15sp"
           style="@style/ThemeOverlay.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelText="@string/textEmail"
                app:met_floatingLabelTextColor="@color/black"
                app:met_hideUnderline="true" />

            <com.rengwuxian.materialedittext.MaterialEditText

                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@id/emailEditText"
                android:hint="@string/textPassword"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/dimen_15sp"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelAnimating="true"
                app:met_floatingLabelText="@string/textPassword"
                app:met_floatingLabelTextColor="@color/black"

                app:met_hideUnderline="true" />
                <CheckBox
                    android:id="@+id/checkBoxShowPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Show Password"
                    android:layout_below="@id/passwordEditText"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    />
            <TextView
                android:id="@+id/textsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textSignup"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:textColor="@color/colorTextView"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold"
                android:layout_below="@id/checkBoxShowPassword"

                android:transitionName="textTransition"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dimen_12dp"/>

            <TextView
                android:id="@+id/textForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/textsignup"

                android:text="@string/textForgotpwd"
                android:textColor="@color/colorTextView"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fieldsLayout"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:background="@drawable/login_button"
            android:text="@string/textSignIn"
            android:textAllCaps="false"
            android:textColor="#0B3D48"
            android:textSize="@dimen/dimen_16sp" />

        <Button
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/google_sign_in"
            android:layout_below="@id/loginButton"
            android:drawableStart="@drawable/ic_google_plus_circular_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen_16sp"
            android:drawablePadding="2dip"
            android:paddingLeft="@dimen/dimen_30dp"
            android:paddingRight="@dimen/dimen_26dp"
            android:singleLine="true"
            android:gravity="center"
            android:id="@+id/google_sign_in_button"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:background="@drawable/login_button"
        />


    </RelativeLayout>
</layout>



<!--<com.google.android.gms.common.SignInButton-->
<!--android:id="@+id/google_sign_in_button"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_below="@id/loginButton"-->
<!--android:layout_marginTop="@dimen/dimen_25dp"-->

<!--android:gravity="center" />-->